--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation("androidx.room:room-runtime:2.4.0")
     kapt "androidx.room:room-compiler:2.4.0"
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
